--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="section-1">
     <a href="#">
       <img src="logo.png" alt="الفيزياء حياة">
+      <h2>م. مصطفى الشامى</h2>
     </a>
   </div>
 
@@ -67,7 +68,7 @@
 
     <div class="contener-3">
       <h2 class="title" id="time-table">جدول المواعيد </h2>
-      <p>إن لما يظهر لك جدول المواعيد بشكل سليم يرجي وضع الهاتف في الوضع الأفقى او تفعيل وضع سطح المكتب.</p>
+      <p>إن لم يظهر لك جدول المواعيد بشكل سليم يرجي وضع الهاتف في الوضع الأفقى او تفعيل وضع سطح المكتب.</p>
       <table class="table">
         <th class="thead">
         <td>السبت</td>
@@ -133,7 +134,7 @@
           <td><img src="youtube.png" alt=""></td>
         </tr>
       </table>
-      <h2 class="title">سنتر الامير بسرابيوم </h2>
+      <h2 class="title">سنتر بسرابيوم </h2>
       <p>سنتر الأمير وهو مركز من المراكز المخصصة للشرح للمستر مصطفي الشامي حيث تتلقي الشرح مباشرة منه ، واذا كنت من سكان اهل سرابيوم او ما يقارب هذا فعنوان السنتر هو شارع المستشفي امام مدرسة البنات الاعدادية بجوار محل الشيخ للأحذية اما اذا كنت تسكن بعيدا عن سرابيوم فسوف تجد العنوان على خرائط جوجل في نهاية الموقع.</p>
       <!-- start mostafa elshamy id -->
 
@@ -142,12 +143,12 @@
         <tr>
           <td>
             <ol>
-              <li>هو معيد مهندس بجامعة شروق الخاصة.</li>
+              <li>هو معيد مهندس بجامعة شروق الخاصة لمدة سبع سنوات.</li>
               <li>حاصل على شهادة تخرجه من جامعة الشروق الخاصة.</li>
               <li>حاصل على مرتبة شرف على مدار الاربع سنوات بالكلية.</li>
               <li>حاصل على مرتبة معيد بكلية الشروق الخاصة. </li>
               <li>يبلغ من السن ما يقارب الثلاثون عاما.</li>
-              <li>يعمل في مجال التدريس لمدة ما تقارب الخمس سنوات</li>
+              <li>يعمل في مجال التدريس لمدة ما تقارب السبع سنوات</li>
             </ol>
           </td>
           <td>
@@ -167,7 +168,7 @@
         <li>الدخول على بوت التيلجرام الخاص بنا للإستعلام عن الأسعار المتاحة ( الرابط في نهاية الموقع ).</li>
         <li>الذهاب الى اى محل يوجد به خدمة فودفون كاش.</li>
         <li>تحويل المبلغ المطلوب على الرقم الموجود في بوت التيلجرام.</li>
-        <li>تصوير الفتورة ثم ارسالها على الوتس اب الخاص بنا للتأكد.</li>
+        <li>تصوير الفاتورة ثم ارسالها على الوتس اب الخاص بنا للتأكد.</li>
       </ol>
       <div class="contener-1">
         <a class="telegram" href="https://t.me/Physics_Life_bot" target="_blank">بوت التيلجرام</a>
@@ -188,8 +189,8 @@
         <li><a href="https://www.facebook.com/shamybeh7007">الفيسبوك </a></li>
         <li><a href="https://www.instagram.com/mostafa____elshamy/">إنستجرام</a></li>
         <li><a href="https://www.facebook.com/groups/2975647872762286/?ref=share_group_link">جروب الفيسبوك الخاص</a></li>
-        <li><a href="https://maps.app.goo.gl/ruxKDJsfFP8SwB6QA" target="_blank">سنتر الأمير بسرابيوم</a></li>
-        <li><a href="https://maps.app.goo.gl/orydUwvpap7BNYtR9">سنتر الخامسة بالإسماعيلية</a></li>
+        <li><a href="https://maps.app.goo.gl/ruxKDJsfFP8SwB6QA" target="_blank">سنتر بسرابيوم</a></li>
+        <li><a href="https://maps.app.goo.gl/orydUwvpap7BNYtR9">سنتر الأمير الخامسة بالإسماعيلية</a></li>
         <li><a href="https://t.me/Physics_Life_bot">بوت التيلجرام</a></li>
       </ul>
     </div>
