--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html>
 
 <head>
   <meta charset="UTF-8">
@@ -26,7 +26,7 @@
   <div class="section-2" id="home">
     <div class="contener-logo">
       <img src="logo.png" alt="Logo" />
-      <h2 id="h2">م.م مصطفي الشامي</h2>
+      <h2>م.م مصطفي الشامي</h2>
     </div>
     <div class="contener-1">
       <label for="searsh">
