--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
           <td>
             <ol>
               <li>هو معيد مهندس بجامعة شروق الخاصة لمدة سبع سنوات.</li>
-              <li>حاصل على شهادة تخرجه من جامعة الشروق الخاصة.</li>
-              <li>حاصل على مرتبة شرف على مدار الاربع سنوات بالكلية.</li>
-              <li>حاصل على مرتبة معيد بكلية الشروق الخاصة. </li>
+              <li>حاصل علي شهادة تخرجة من كلية الهندسة.</li>
+              <li>حاصل علي تقدير امتياز مع مرتبة الشرف علي مدار الخمس سنوات.</li>
+              <li>يعمل معيد في كلية الهندسة منذ اكثر من سبع سنوات.</li>
               <li>يبلغ من السن ما يقارب الثلاثون عاما.</li>
-              <li>يعمل في مجال التدريس لمدة ما يقار السبع سنوات</li>
+              <li>يعمل في مجال التدريس لمدة ما يقارب السبع سنوات</li>
             </ol>
           </td>
           <td>
