--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <li>حاصل علي تقدير امتياز مع مرتبة الشرف علي مدار الخمس سنوات.</li>
               <li>يعمل معيد في كلية الهندسة منذ اكثر من سبع سنوات.</li>
               <li>يبلغ من السن ما يقارب الثلاثون عاما.</li>
-              <li>يعمل في مجال التدريس لمدة ما يقارب السبع سنوات</li>
+              <li>يعمل في مجال التدريس لمدة ما يقارب السبع سنوات.</li>
             </ol>
           </td>
           <td>
