--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
   <!-- start footer -->
 
   <footer>
-    <a href="https://mostafa-mo7ammed.github.io/MM-Logo_Maker/">جميع الحقوق محفوظة لدى M.M Log Maker</a>
-    <a href="mailto:mostafamezo256@gmail.com">mostafamezo256@gmail.com</a>
+    <a href="https://mostafa-mo7ammed.github.io/MM-Logo_Maker/" target="_blank">جميع الحقوق محفوظة لدى M.M Log Maker</a>
+    <a href="mailto:mostafamezo256@gmail.com" target="_blank">mostafamezo256@gmail.com</a>
   </footer>
 
   <!-- end footer -->
